--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/sakai-akinobu/esprima-escodegen-sandbox/issues"
   },
-  "homepage": "https://github.com/sakai-akinobu/esprima-escodegen-sandbox#readme"
+  "homepage": "https://github.com/sakai-akinobu/esprima-escodegen-sandbox#readme",
+  "devDependencies": {
+    "esprima": "^4.0.1"
+  }
 }
