--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ast-types": "^0.11.5",
     "escodegen": "^1.11.0",
     "esprima": "^4.0.1",
+    "estraverse": "^4.2.0",
     "mocha": "^5.2.0",
     "power-assert": "^1.6.1"
   }
